--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "axios": "^1.6.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
