--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "axios": "^1.6.0",
+    "material-ui-popup-state": "^5.0.10",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
