--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "material-ui-popup-state": "^5.0.10",
     "next": "14.0.1",
     "react": "^18",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18"
   },
   "devDependencies": {
