--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "@mui/x-date-pickers": "^6.18.2",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
     "install": "^0.13.0",
     "material-ui-popup-state": "^5.0.10",
     "next": "14.0.1",
@@ -25,6 +27,8 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "suneditor": "^2.45.1",
+    "suneditor-react": "^3.6.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
